--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 /* header */
+body{
+  width: 1500px;
+}
+
 a {
   text-decoration: none;
   color: inherit;
@@ -8,7 +12,7 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 70px;
+  height: 50px;
   padding: 0 30px;
   color: gray;
 }
@@ -33,17 +37,19 @@ a {
 /* contents */
 .contents {
   position: relative;
+  height: 600px;
 }
 
 .firstview {
   margin: 0 0 0 auto;
-  display: block;
+  display: flex;
+  justify-content: flex-end;
   width: 50%;
 }
 
 .contents_item {
   position: absolute;
-  top: 18%;
+  top: 11%;
   left: 33%;
   line-height: 200%;
   font-size: 50px;
@@ -52,11 +58,11 @@ a {
 .contents_item2{
   font-size: 21px;
   margin-left: 33%;
-  margin-top: -14%;
+  margin-top: -15%;
 }
 
-p{
-  margin-top: 1%;
+.contents p{
+  margin-top: 6px;
   margin-left: 33%;
   line-height: 30px;
 }
@@ -65,17 +71,27 @@ p{
 
 
 /* News */
-ul {
-  width: 700px;
+
+.News h2{
+  border-bottom: 1px solid gray;
+  margin-bottom: 10px;
+  margin: 0 315px 0 605px;
+  padding-bottom: 33px;
+}
+
+.News p{
+  margin-bottom: 15px;
+  margin-left: 605px;
 }
 
 .News ul li {
   display: flex;
+  justify-content: center;
   padding: 15px;
   border-bottom: 1px solid gray;
+  margin: 0 315px 0 605px;
+  border-bottom: 1px solid gray;
 }
-
-.day {}
 
 .label {
   background-color: #B13546;
@@ -83,9 +99,7 @@ ul {
   color: #fff;
   padding: 2px 5px;
   margin: 0 20px;
-  width: 80px;
-  height: 18px;
+  width: 65px;
+  height: 16px;
 }
 
-.text {
-}
